WIP: Updating tests